@startuml Boundary

!include _skinparams.puml
!include _ds.puml

hide class circle
hide class attributes
hide enum circle
hide enum methods

class Model implements .Ds.Hashable
hide Model methods

enum Status <<enumeration>>
    Status : CREATED
    Status : NOT_CREATED
    Status : FOUND
    Status : NOT_FOUND
    Status : CHANGED
    Status : NOT_CHANGED
    Status : REMOVED
    Status : NOT_REMOVED
    Status : COLLECTION
    Status : EMPTY
    Status : NOTIFICATIONS

class ResponsePayload <<iterator>>
    ResponsePayload : status(): Status

    ResponsePayload ..> Status
    ResponsePayload .left.> Model


interface ResponseBoundary <<interface>>
    ResponseBoundary : respond(ResponsePayload: payload): void
    
    ResponseBoundary ..> ResponsePayload

interface RequestBoundary <<interface>>
    RequestBoundary : execute(Model: requestModel, ResponseBoundary: boundary): void

    RequestBoundary ..> Model
    RequestBoundary ..> ResponseBoundary

@enduml
